Ajout des dernières modifications

--- a/src/main/resources/templates/accueil.html
+++ b/src/main/resources/templates/accueil.html
@@ -18,7 +18,7 @@
     <!-- Contenu à droite -->
     <div class="content">
 
-        <h1>Bienvenue dans votre application<br>de <span>gestion de stock</span></h1>
+        <h1>Bienvenue dans votre application<br></h1>
 
         <!-- Bloc de message d'erreur -->
         <div th:if="${erreur}" style="color: red; margin-bottom: 10px;" th:text="${erreur}"></div>
