--- a/src/main/resources/templates/reset-password-final.html
+++ b/src/main/resources/templates/reset-password-final.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<form action="/reset-password-final" method="post">
+  <input type="hidden" name="email" th:value="${email}">
+  <input type="password" name="newPassword" placeholder="Nouveau mot de passe" required>
+  <input type="password" name="confirmPassword" placeholder="Confirmer" required>
+  <button type="submit">Changer le mot de passe</button>
+</form>
