--- a/src/main/resources/templates/rapport.html
+++ b/src/main/resources/templates/rapport.html
@@ -84,6 +84,21 @@
     </button>
   </div>
 </div>
+<!-- Section Rapport Power BI -->
+<div class="mb-8 bg-white p-6 rounded shadow-md">
+  <h3 class="text-xl font-bold text-center text-indigo-700 mb-4">Analyse Power BI</h3>
+  <div class="overflow-x-auto">
+    <iframe title="gestionstock"
+            width="100%"
+            height="541"
+            src="https://app.powerbi.com/reportEmbed?reportId=afeb348f-cc0c-41c7-be67-a26d46aedde3&autoAuth=true&ctid=2ec11419-847c-4e29-8815-7f5b2fed9339"
+            frameborder="0"
+            allowFullScreen="true"
+            class="rounded-lg shadow-lg">
+    </iframe>
+  </div>
+</div>
+
 
 <script>
   // Charger les statistiques générales
